--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
       <section class="pet-image-container">
          <!-- Replace pet image with your own pet image -->
-        <img class="pet-image" src="https://cdn.glitch.me/c96e7747-7443-477b-89ae-aa8da73a09af%2Fpepedance.gif?v=1637091933883" style="position:absolute;top:450px;left:700px;z-index:1">
+        <img id="image" class="pet-image" src="https://cdn.glitch.me/c96e7747-7443-477b-89ae-aa8da73a09af%2Fpepedance.gif?v=1637091933883" style="position:absolute;top:450px;left:700px;z-index:1">
       </section>
       <section class="dashboard" style="position:absolute;top:450px;left:700px;z-index:1">
         <div>Name: <strong><span class="name"></span></strong></div>
