--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         This is your Giga Pet
       </h1>
     </header>
-
+<audio autoplay loop controls>
+    <source src="https://cdn.glitch.me/c96e7747-7443-477b-89ae-aa8da73a09af%2FLady%20Hear%20Me%20Tonight.mp3?v=1637096717943.ogg">
+    <source src="yoursound.mp3">
+</audio>
     <main>
       <section class="pet-image-container">
          <!-- Replace pet image with your own pet image -->
@@ -35,6 +38,9 @@
           </button>
           <button class="exercise-button">
             Exercise
+          </button>
+          <button class="dance-button">
+            Super Dance
           </button>
         </div>
       </section>
