--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       </h1>
     </header>
 <audio autoplay loop controls>
-    <source src="https://cdn.glitch.me/c96e7747-7443-477b-89ae-aa8da73a09af%2FLady%20Hear%20Me%20Tonight.mp3?v=1637096717943.ogg">
-    <source src="yoursound.mp3">
+    <source id="sound" src="https://cdn.glitch.me/c96e7747-7443-477b-89ae-aa8da73a09af%2FLady%20Hear%20Me%20Tonight.mp3?v=1637096717943.ogg">
+    <source id="sound" src="https://cdn.glitch.me/c96e7747-7443-477b-89ae-aa8da73a09af%2FLady%20Hear%20Me%20Tonight.mp3?v=1637096717943.mp3">
 </audio>
     <main>
       <section class="pet-image-container">
