--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <audio loop autoplay>
+  <source id="sound" src="https://cdn.glitch.me/c96e7747-7443-477b-89ae-aa8da73a09af%2FLady%20Hear%20Me%20Tonight.mp3?v=1637096717943" type="audio/mpeg">
+</audio>
     <header>
       <h1>
         This is your Giga Pet
